--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,12 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+#todo-list {
+  max-width: 600px;
+  margin: 0 auto
+}
+
+#todo-title {
+  background: gold
+}
