--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
 	padding: 0;
 }
 
-#todo-list {
+#root > div {
 	background: white;
 	box-shadow: 0px 1px 15px 0px #999;
 	padding-bottom: 2rem;
